Rationalise \int_eval:n vs. \@@_int_eval:w
This is a tidy up of the 'already done' work.
Where we can avoid the primitive entirely, we do.
Otherwise we keep it for all uses in a module.

--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -878,8 +878,9 @@
 %    \end{macrocode}
 %
 % \begin{macro}{\@@_int_eval:w}
-%   Access to primitives: the code here uses the expansion behaviors for
-%   efficiency.
+%   Access to primitive: there are a few uses where we cannot grab the
+%   expression as an argument, so need the \texttt{w} signature. Other cases
+%   are retained (no using \cs{int_eval:n}) as there is a performance gain.
 %    \begin{macrocode}
 \cs_new_eq:NN \@@_int_eval:w \etex_numexpr:D
 %    \end{macrocode}
