--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1354,12 +1354,10 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}
-%   {\@@_int_eval:w, \@@_int_to_roman:w}
-%   Access to primitives: the code here uses the expansion behaviors for
-%   efficiency.
+% \begin{macro}{\@@_int_to_roman:w}
+%   For efficiency in 8-bit engines, we use the faster primitive approach
+%   to making roman numerals.
 %    \begin{macrocode}
-\cs_new_eq:NN \@@_int_eval:w \etex_numexpr:D
 \cs_new_eq:NN \@@_int_to_roman:w \tex_romannumeral:D
 %    \end{macrocode}
 % \end{macro}
@@ -1381,14 +1379,14 @@
 \cs_new:Npn \char_generate:nn #1#2
   {
     \exp:w \exp_after:wN \@@_generate_aux:w
-      \int_value:w \@@_int_eval:w #1 \exp_after:wN ;
-      \int_value:w \@@_int_eval:w #2 ;
+      \int_value:w \int_eval:n {#1} \exp_after:wN ;
+      \int_value:w \int_eval:n {#2} ;
   }
 \cs_new:Npn \__kernel_char_generate:nn #1#2
   {
     \exp:w \exp_after:wN
       \@@_generate_aux:nnw \exp_after:wN
-        { \int_value:w \@@_int_eval:w #1 } {#2} \exp_end:
+        { \int_value:w \int_eval:n {#1} } {#2} \exp_end:
   }
 %    \end{macrocode}
 %   Before doing any actual conversion, first some special case filtering.
