--- a/l3kernel/l3sort.dtx
+++ b/l3kernel/l3sort.dtx
@@ -435,7 +435,6 @@
 % \end{macro}
 %
 % \begin{macro}{\@@_toks:NN, \@@_toks:NNw}
-% \begin{macro}{\@@_int_eval:w}
 %   Unpack the various \tn{toks} registers, from \cs{l_@@_min_int} to
 %   $\cs{l_@@_top_int}-1$. The functions |#1| and |#2| allow us to treat
 %   the three data structures in a unified way:
@@ -458,12 +457,10 @@
     \if_int_compare:w #3 < \l_@@_top_int
       #1 #2 { \tex_the:D \tex_toks:D #3 }
       \exp_after:wN \@@_toks:NNw \exp_after:wN #1 \exp_after:wN #2
-      \int_value:w \@@_int_eval:w #3 + 1 \exp_after:wN ;
+      \int_value:w \int_eval:n { #3 + 1 } \exp_after:wN ;
     \fi:
   }
-\cs_new_eq:NN \@@_int_eval:w \etex_numexpr:D
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 %
 % \subsection{Merge sort}
