Back to \int_value:w (from \int_eval:n) in l3regex
As \int_value:w is now public, and there is a performance gain,
this makes sense here.

--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -2471,13 +2471,13 @@
           { \@@_compile_range:Nw #1 }
           {
             \@@_compile_one:n
-              { \@@_item_equal:n { \int_eval:n { `#1 } } }
+              { \@@_item_equal:n { \int_value:w `#1 } }
             #2 #3
           }
       }
       {
         \@@_compile_one:n
-          { \@@_item_equal:n { \int_eval:n { `#1 } } }
+          { \@@_item_equal:n { \int_value:w `#1 } }
         #2 #3
       }
   }
@@ -2518,9 +2518,9 @@
               \if_int_compare:w `#1 = `#3 \exp_stop_f:
                 \@@_item_equal:n
               \else:
-                \@@_item_range:nn { \int_eval:n { `#1 } }
+                \@@_item_range:nn { \int_value:w `#1 }
               \fi:
-              { \int_eval:n { `#3 } }
+              { \int_value:w `#3 }
             }
         \fi:
       }
@@ -2529,8 +2529,8 @@
           {#1} { \c_backslash_str #3 }
         \__tl_build_one:x
           {
-            \@@_item_equal:n { \int_eval:n { `#1 } }
-            \@@_item_equal:n { \int_eval:n { `- } }
+            \@@_item_equal:n { \int_value:w `#1 \exp_stop_f: }
+            \@@_item_equal:n { \int_value:w `- \exp_stop_f: }
           }
         #2#3
       }
@@ -3324,7 +3324,7 @@
 \cs_new:Npn \@@_compile_u_in_cs_aux:n #1
   {
     \@@_class:NnnnN \c_true_bool
-      { \@@_item_caseful_equal:n { \int_eval:n { `#1 } } }
+      { \@@_item_caseful_equal:n { \int_value:w `#1 } }
       { 1 } { 0 } \c_false_bool
   }
 %    \end{macrocode}
@@ -3347,7 +3347,7 @@
                 \if_int_compare:w "##2 = 0 \exp_stop_f:
                   \@@_item_exact_cs:n { \exp_after:wN \cs_to_str:N ##1 }
                 \else:
-                  \@@_item_exact:nn { \int_eval:n { "##2 } } { ##3 }
+                  \@@_item_exact:nn { \int_value:w "##2 } { ##3 }
                 \fi:
               }
               { 1 } { 0 } \c_false_bool
@@ -5985,7 +5985,7 @@
     \__seq_item:n
       {
         \exp_after:wN \@@_extract_seq_aux:ww
-        \int_eval:n { \@@_submatch_balance:n {#1} } ; #1;
+        \int_value:w \@@_submatch_balance:n {#1} ; #1;
       }
   }
 \cs_new:Npn \@@_extract_seq_aux:ww #1; #2;
