Use 'local' names for dynamic mapping functions

--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -2233,9 +2233,9 @@
   {
     \int_gincr:N \g__prg_map_int
     \cs_gset_protected:cpn
-      { __prg_map_ \int_use:N \g__prg_map_int :w } ##1 {#2}
+      { @@_map_ \int_use:N \g__prg_map_int :w } ##1 {#2}
     \exp_args:Nc \@@_map_function:Nn
-      { __prg_map_ \int_use:N \g__prg_map_int :w }
+      { @@_map_ \int_use:N \g__prg_map_int :w }
       #1 \q_recursion_tail
     \prg_break_point:Nn \tl_map_break: { \int_gdecr:N \g__prg_map_int }
   }
