--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -1540,9 +1540,9 @@
       {
         \int_gincr:N \g__prg_map_int
         \cs_gset_protected:cpn
-          { __prg_map_ \int_use:N \g__prg_map_int :w } ##1 {#2}
+          { @@_map_ \int_use:N \g__prg_map_int :w } ##1 {#2}
         \exp_last_unbraced:Nco \@@_map_function:Nw
-          { __prg_map_ \int_use:N \g__prg_map_int :w }
+          { @@_map_ \int_use:N \g__prg_map_int :w }
           #1 , \q_recursion_tail ,
         \prg_break_point:Nn \clist_map_break:
           { \int_gdecr:N \g__prg_map_int }
