--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -714,8 +714,10 @@
 %
 % \begin{variable}{\g__prg_map_int}
 %   This integer is used by non-expandable mapping functions to track
-%   the level of nesting in force.  The functions \cs{__prg_map_1:w},
-%   \cs{__prg_map_2:w}, \emph{etc.}, labelled by \cs{g__prg_map_int}
+%   the level of nesting in force.  The functions
+%   \cs[no-index]{\meta{type}_map_1:w},
+%   \cs[no-index]{\meta{type}_map_2:w}, \emph{etc.}, labelled by
+%   \cs{g__prg_map_int}
 %   hold functions to be mapped over various list datatypes in inline
 %   and variable mappings.
 % \end{variable}
