--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -1145,7 +1145,7 @@
 \cs_new_protected:Npn \prop_map_inline:Nn #1#2
   {
     \cs_gset_eq:cN
-      { __prg_map_ \int_use:N \g__prg_map_int :wn } \@@_pair:wn
+      { @@_map_ \int_use:N \g__prg_map_int :wn } \@@_pair:wn
     \int_gincr:N \g__prg_map_int
     \cs_gset_protected:Npn \@@_pair:wn ##1 \s_@@ ##2 {#2}
     #1
@@ -1153,7 +1153,7 @@
       {
         \int_gdecr:N \g__prg_map_int
         \cs_gset_eq:Nc \@@_pair:wn
-          { __prg_map_ \int_use:N \g__prg_map_int :wn }
+          { @@_map_ \int_use:N \g__prg_map_int :wn }
       }
   }
 \cs_generate_variant:Nn \prop_map_inline:Nn { c }
