Use a kernel-specific counter for mappings
We could use one per module, but that is a bit of a waste.

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -1453,16 +1453,16 @@
   { \@@_map_inline:NNn \ior_str_get:NN }
 \cs_new_protected:Npn \@@_map_inline:NNn
   {
-    \int_gincr:N \g__prg_map_int
+    \int_gincr:N \g__kernel_prg_map_int
     \exp_args:Nc \@@_map_inline:NNNn
-      { @@_map_ \int_use:N \g__prg_map_int :n }
+      { @@_map_ \int_use:N \g__kernel_prg_map_int :n }
   }
 \cs_new_protected:Npn \@@_map_inline:NNNn #1#2#3#4
   {
     \cs_gset_protected:Npn #1 ##1 {#4}
     \ior_if_eof:NF #3 { \@@_map_inline_loop:NNN #1#2#3 }
     \prg_break_point:Nn \ior_map_break:
-      { \int_gdecr:N \g__prg_map_int }
+      { \int_gdecr:N \g__kernel_prg_map_int }
   }
 \cs_new_protected:Npn \@@_map_inline_loop:NNN #1#2#3
   {
