--- a/l3kernel/l3tl-analysis.dtx
+++ b/l3kernel/l3tl-analysis.dtx
@@ -900,7 +900,7 @@
 % \begin{macro}{\@@_map_inline_aux:Nn}
 %   First obtain the analysis of the token list into
 %   \cs{g_@@_result_tl}. To allow nested mappings, increase the
-%   nesting depth \cs{g__prg_map_int} (shared between all modules), then
+%   nesting depth \cs{g__kernel_prg_map_int} (shared between all modules), then
 %   define the looping macro, which has a name specific to that nesting
 %   depth. That looping grabs the \meta{tokens}, \meta{catcode} and
 %   \meta{char code}; it checks for the end of the loop with
@@ -912,9 +912,9 @@
 \cs_new_protected:Npn \@@_map_inline:nn #1
   {
     \@@:n {#1}
-    \int_gincr:N \g__prg_map_int
+    \int_gincr:N \g__kernel_prg_map_int
     \exp_args:Nc \@@_map_inline_aux:Nn
-      { @@_map_inline_ \int_use:N \g__prg_map_int :wNw }
+      { @@_map_inline_ \int_use:N \g__kernel_prg_map_int :wNw }
   }
 \cs_new_protected:Npn \@@_map_inline_aux:Nn #1#2
   {
@@ -927,7 +927,7 @@
     \exp_after:wN #1
       \g_@@_result_tl
       \s__tl { ? \tl_map_break: } \s__tl
-    \prg_break_point:Nn \tl_map_break: { \int_gdecr:N \g__prg_map_int }
+    \prg_break_point:Nn \tl_map_break: { \int_gdecr:N \g__kernel_prg_map_int }
   }
 %    \end{macrocode}
 % \end{macro}
