--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -2,7 +2,7 @@
 %
 %% File: l3clist.dtx Copyright (C) 2004-2011 Frank Mittelbach,
 %%                                 The LaTeX3 project
-%%                             (C) 2012-2017 The LaTeX3 Project
+%%                             (C) 2012-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -1538,14 +1538,14 @@
   {
     \clist_if_empty:NF #1
       {
-        \int_gincr:N \g__prg_map_int
+        \int_gincr:N \g__kernel_prg_map_int
         \cs_gset_protected:cpn
-          { @@_map_ \int_use:N \g__prg_map_int :w } ##1 {#2}
+          { @@_map_ \int_use:N \g__kernel_prg_map_int :w } ##1 {#2}
         \exp_last_unbraced:Nco \@@_map_function:Nw
-          { @@_map_ \int_use:N \g__prg_map_int :w }
+          { @@_map_ \int_use:N \g__kernel_prg_map_int :w }
           #1 , \q_recursion_tail ,
         \prg_break_point:Nn \clist_map_break:
-          { \int_gdecr:N \g__prg_map_int }
+          { \int_gdecr:N \g__kernel_prg_map_int }
       }
   }
 \cs_new_protected:Npn \clist_map_inline:nn #1
