--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3prop.dtx Copyright (C) 1990-2017 The LaTeX3 Project
+%% File: l3prop.dtx Copyright (C) 1990-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -1145,15 +1145,15 @@
 \cs_new_protected:Npn \prop_map_inline:Nn #1#2
   {
     \cs_gset_eq:cN
-      { @@_map_ \int_use:N \g__prg_map_int :wn } \@@_pair:wn
-    \int_gincr:N \g__prg_map_int
+      { @@_map_ \int_use:N \g__kernel_prg_map_int :wn } \@@_pair:wn
+    \int_gincr:N \g__kernel_prg_map_int
     \cs_gset_protected:Npn \@@_pair:wn ##1 \s_@@ ##2 {#2}
     #1
     \prg_break_point:Nn \prop_map_break:
       {
-        \int_gdecr:N \g__prg_map_int
+        \int_gdecr:N \g__kernel_prg_map_int
         \cs_gset_eq:Nc \@@_pair:wn
-          { @@_map_ \int_use:N \g__prg_map_int :wn }
+          { @@_map_ \int_use:N \g__kernel_prg_map_int :wn }
       }
   }
 \cs_generate_variant:Nn \prop_map_inline:Nn { c }
