--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -1609,24 +1609,24 @@
 %   required to make the nesting safe (as seen in other in line
 %   functions), and map that function using \cs{dim_step_function:nnnN}.
 %   We put a \cs{prg_break_point:Nn} so that \texttt{map_break}
-%   functions from other modules correctly decrement \cs{g__prg_map_int}
+%   functions from other modules correctly decrement \cs{g__kernel_prg_map_int}
 %   before looking for their own break point.  The first argument is
 %   \cs{scan_stop:}, so that no breaking function recognizes this break
 %   point as its own.
 %    \begin{macrocode}
 \cs_new_protected:Npn \dim_step_inline:nnnn
   {
-    \int_gincr:N \g__prg_map_int
+    \int_gincr:N \g__kernel_prg_map_int
     \exp_args:NNc \@@_step:NNnnnn
       \cs_gset_protected:Npn
-      { @@_map_ \int_use:N \g__prg_map_int :w }
+      { @@_map_ \int_use:N \g__kernel_prg_map_int :w }
   }
 \cs_new_protected:Npn \dim_step_variable:nnnNn #1#2#3#4#5
   {
-    \int_gincr:N \g__prg_map_int
+    \int_gincr:N \g__kernel_prg_map_int
     \exp_args:NNc \@@_step:NNnnnn
       \cs_gset_protected:Npx
-      { @@_map_ \int_use:N \g__prg_map_int :w }
+      { @@_map_ \int_use:N \g__kernel_prg_map_int :w }
       {#1}{#2}{#3}
       {
         \tl_set:Nn \exp_not:N #4 {##1}
@@ -1637,7 +1637,7 @@
   {
     #1 #2 ##1 {#6}
     \dim_step_function:nnnN {#3} {#4} {#5} #2
-    \prg_break_point:Nn \scan_stop: { \int_gdecr:N \g__prg_map_int }
+    \prg_break_point:Nn \scan_stop: { \int_gdecr:N \g__kernel_prg_map_int }
   }
 %    \end{macrocode}
 % \end{macro}
