--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -2225,19 +2225,19 @@
 % \begin{macro}{\tl_map_inline:nn}
 % \begin{macro}{\tl_map_inline:Nn, \tl_map_inline:cn}
 %   The inline functions are straight forward by now. We use a little
-%   trick with the counter \cs{g__prg_map_int} to make
+%   trick with the counter \cs{g__kernel_prg_map_int} to make
 %   them nestable. We can also make use of \cs{@@_map_function:Nn}
 %   from before.
 %    \begin{macrocode}
 \cs_new_protected:Npn \tl_map_inline:nn #1#2
   {
-    \int_gincr:N \g__prg_map_int
+    \int_gincr:N \g__kernel_prg_map_int
     \cs_gset_protected:cpn
-      { @@_map_ \int_use:N \g__prg_map_int :w } ##1 {#2}
+      { @@_map_ \int_use:N \g__kernel_prg_map_int :w } ##1 {#2}
     \exp_args:Nc \@@_map_function:Nn
-      { @@_map_ \int_use:N \g__prg_map_int :w }
+      { @@_map_ \int_use:N \g__kernel_prg_map_int :w }
       #1 \q_recursion_tail
-    \prg_break_point:Nn \tl_map_break: { \int_gdecr:N \g__prg_map_int }
+    \prg_break_point:Nn \tl_map_break: { \int_gdecr:N \g__kernel_prg_map_int }
   }
 \cs_new_protected:Npn \tl_map_inline:Nn
   { \exp_args:No \tl_map_inline:nn }
