Make prg break functions public

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -3558,16 +3558,16 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\@@_break_point:}
-% \begin{macro}{\@@_break:, \@@_break:n}
-%   Very simple analogues of \cs{@@_break_point:Nn} and
+% \begin{macro}{\prg_break_point:}
+% \begin{macro}{\prg_break:, \prg_break:n}
+%   Very simple analogues of \cs{prg_break_point:Nn} and
 %   \cs{@@_map_break:Nn}, for use in fast short-term recursions which
 %   are not mappings, do not need to support nesting, and in which
 %   nothing has to be done at the end of the loop.
 %    \begin{macrocode}
-\cs_new_eq:NN \@@_break_point: \prg_do_nothing:
-\cs_new:Npn \@@_break: #1 \@@_break_point: { }
-\cs_new:Npn \@@_break:n #1#2 \@@_break_point: {#1}
+\cs_new_eq:NN \prg_break_point: \prg_do_nothing:
+\cs_new:Npn \prg_break: #1 \prg_break_point: { }
+\cs_new:Npn \prg_break:n #1#2 \prg_break_point: {#1}
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
