--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -904,7 +904,7 @@
 %   not exist then \TeX{} reports end-of-file. A search is made
 %   looking at each potential path in turn (starting from the current
 %   directory). The first location is of course treated as the correct
-%   one: this is done by jumping to \cs{__prg_break_point:}. If nothing
+%   one: this is done by jumping to \cs{prg_break_point:}. If nothing
 %   is found, |#2| is returned empty. A special case when there is no
 %   extension is that once the first location is found we test the
 %   existence of the file with |.tex| extension in that directory, and
@@ -924,7 +924,7 @@
       }
 %</package>
     \str_clear:N \l__file_full_name_str
-    \__prg_break_point:
+    \prg_break_point:
     \str_if_empty:NF \l__file_full_name_str
       {
         \exp_args:NV \file_parse_full_name:nNNN \l__file_full_name_str
@@ -947,7 +947,7 @@
       { \tl_to_str:n {#1} \l__file_base_name_str }
       \l__file_full_name_str
     \__ior_open:No \g_@@_internal_ior \l__file_full_name_str
-    \ior_if_eof:NF \g_@@_internal_ior { #2 { \__prg_break: } }
+    \ior_if_eof:NF \g_@@_internal_ior { #2 { \prg_break: } }
   }
 %    \end{macrocode}
 % \end{macro}
