--- a/l3kernel/l3fp-aux.dtx
+++ b/l3kernel/l3fp-aux.dtx
@@ -513,8 +513,8 @@
 \cs_new:Npn \@@_tuple_count:w \s_@@_tuple \@@_tuple_chk:w #1 ;
   {
     \int_value:w \@@_int_eval:w 0
-      \@@_tuple_count_loop:Nw #1 { ? \__prg_break: } ;
-      \__prg_break_point:
+      \@@_tuple_count_loop:Nw #1 { ? \prg_break: } ;
+      \prg_break_point:
     \@@_int_eval_end:
   }
 \cs_new:Npn \@@_tuple_count_loop:Nw #1#2;
@@ -539,14 +539,14 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_array_if_all_fp:nTF #1
   {
-    \@@_array_if_all_fp_loop:w #1 { \s_@@ \__prg_break: } ;
-    \__prg_break_point: \use_i:nn
+    \@@_array_if_all_fp_loop:w #1 { \s_@@ \prg_break: } ;
+    \prg_break_point: \use_i:nn
   }
 \cs_new:Npn \@@_array_if_all_fp_loop:w #1#2 ;
   {
     \@@_if_type_fp:NTwFw
       #1 \@@_array_if_all_fp_loop:w
-      \s_@@ { \__prg_break:n \use_iii:nnn }
+      \s_@@ { \prg_break:n \use_iii:nnn }
       \q_stop
   }
 %    \end{macrocode}
