--- a/l3kernel/l3fp-logic.dtx
+++ b/l3kernel/l3fp-logic.dtx
@@ -227,9 +227,9 @@
       {
         \int_value:w 0
           \@@_tuple_compare_back_loop:w
-              #1 { \s_@@ \__prg_break: } ; @
-              #2 { \s_@@ \__prg_break: } ;
-            \__prg_break_point:
+              #1 { \s_@@ \prg_break: } ; @
+              #2 { \s_@@ \prg_break: } ;
+            \prg_break_point:
         \exp_stop_f:
       }
       { 2 }
@@ -241,7 +241,7 @@
     \if_int_compare:w
         \@@_compare_back_any:ww #1 #2 ; #4 #5 ; = 0 \exp_stop_f:
     \else:
-      2 \exp_after:wN \__prg_break:
+      2 \exp_after:wN \prg_break:
     \fi:
     \@@_tuple_compare_back_loop:w #3 @
   }
@@ -398,11 +398,11 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_step:wwwN #1#2; #3#4; #5#6; #7
   {
-    \@@_if_type_fp:NTwFw #1 { } \s_@@ \__prg_break: \q_stop
-    \@@_if_type_fp:NTwFw #3 { } \s_@@ \__prg_break: \q_stop
-    \@@_if_type_fp:NTwFw #5 { } \s_@@ \__prg_break: \q_stop
+    \@@_if_type_fp:NTwFw #1 { } \s_@@ \prg_break: \q_stop
+    \@@_if_type_fp:NTwFw #3 { } \s_@@ \prg_break: \q_stop
+    \@@_if_type_fp:NTwFw #5 { } \s_@@ \prg_break: \q_stop
     \use_i:nnnn { \@@_step_fp:wwwN #1#2; #3#4; #5#6; #7 }
-    \__prg_break_point:
+    \prg_break_point:
     \use:n
       {
         \@@_error:nfff { fp-step-tuple } { \fp_to_tl:n { #1#2 ; } }
