--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -689,6 +689,26 @@
 %   simply used as a recognizable marker for the \meta{type}.
 % \end{function}
 %
+% \subsection{Simple mappings}
+%
+% In addition to the more complex mappings above, non-nestable mappings are
+% used in a number of locations and support is provided for these.
+%
+% \begin{function}[EXP, added = 2018-03-27]{\prg_break_point:}
+%   This copy of \cs{prg_do_nothing:} is used to mark the end of a fast
+%   short-term recursion: the function \cs{prg_break:n} uses this to
+%   break out of the loop.
+% \end{function}
+%
+% \begin{function}[EXP, added = 2018-03-27]{\prg_break:, \prg_break:n}
+%   \begin{syntax}
+%     \cs{prg_break:n} \Arg{code} \ldots{} \cs{prg_break_point:}
+%   \end{syntax}
+%   Breaks a recursion which has no \meta{ending code} and which is not
+%   a user-breakable mapping (see for instance \cs{prop_get:Nn}), and
+%   inserts the \meta{code} in the input stream.
+% \end{function}
+%
 % \section{Internal programming functions}
 %
 % \begin{function}[updated = 2011-08-11, EXP]
@@ -721,21 +741,6 @@
 %   hold functions to be mapped over various list datatypes in inline
 %   and variable mappings.
 % \end{variable}
-%
-% \begin{function}[EXP]{\__prg_break_point:}
-%   This copy of \cs{prg_do_nothing:} is used to mark the end of a fast
-%   short-term recursion: the function \cs{__prg_break:n} uses this to
-%   break out of the loop.
-% \end{function}
-%
-% \begin{function}[EXP]{\__prg_break:, \__prg_break:n}
-%   \begin{syntax}
-%     \cs{__prg_break:n} \Arg{code} \ldots{} \cs{__prg_break_point:}
-%   \end{syntax}
-%   Breaks a recursion which has no \meta{ending code} and which is not
-%   a user-breakable mapping (see for instance \cs{prop_get:Nn}), and
-%   inserts the \meta{code} in the input stream.
-% \end{function}
 %
 % \end{documentation}
 %
@@ -1549,8 +1554,8 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\@@_break_point:}
-% \begin{macro}{\@@_break:, \@@_break:n}
+% \begin{macro}{\prg_break_point:}
+% \begin{macro}{\prg_break:, \prg_break:n}
 %   Also done in \pkg{l3basics} as in format mode these are needed within
 %   \pkg{l3alloc}.
 % \end{macro}
@@ -1559,12 +1564,21 @@
 % \subsection{Deprecated functions}
 %
 % \begin{macro}[deprecated = 2019-12-31]{\@@_break_point:Nn}
+% \begin{macro}[deprecated = 2019-12-31]{\@@_break_point:}
 % \begin{macro}[deprecated = 2019-12-31]{\@@_map_break:Nn}
+% \begin{macro}[deprecated = 2019-12-31]{\@@_break:}
+% \begin{macro}[deprecated = 2019-12-31]{\@@_break:n}
 %   Made public, but used by a few third-parties.
 %    \begin{macrocode}
 \cs_new:Npn \@@_break_point:Nn { \prg_break_point:Nn }
+\cs_new:Npn \@@_break_point: { \prg_break_point: }
 \cs_new:Npn \@@_map_break:Nn { \prg_map_break:Nn }
+\cs_new:Npn \@@_break: { \prg_break: }
+\cs_new:Npn \@@_break:n { \prg_break:n }
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 %
