--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -1485,7 +1485,7 @@
       \tl_set:Nx \l_@@_internal_b_tl
         {
           \exp_after:wN \@@_escape_loop:N \g_@@_internal_tl
-          { break } \__prg_break_point:
+          { break } \prg_break_point:
         }
       \__tl_build_one:o \l_@@_internal_b_tl
     \__tl_build_end:
@@ -1541,7 +1541,7 @@
 %   backslash.  Spaces are ignored, and |\a|, |\e|, |\f|, |\n|, |\r|,
 %   |\t| take their meaning here.
 %    \begin{macrocode}
-\cs_new_eq:NN \@@_escape_break:w \__prg_break:
+\cs_new_eq:NN \@@_escape_break:w \prg_break:
 \cs_new:cpn { @@_escape_/break:w }
   {
     \if_false: { \fi: }
@@ -4020,8 +4020,8 @@
           { \int_use:N \l_@@_capturing_group_int }
           { \int_use:N \l_@@_capturing_group_int }
           #1
-          { ?? \__prg_break:n } { }
-        \__prg_break_point:
+          { ?? \prg_break:n } { }
+        \prg_break_point:
       }
   }
 \cs_new_protected:Npn \@@_group_resetting_loop:nnNn #1#2#3#4
@@ -4673,7 +4673,7 @@
           { \l_@@_max_active_int - 1 }
           \@@_match_one_active:n
       }
-    \__prg_break_point:
+    \prg_break_point:
     \bool_set_false:N \l_@@_fresh_thread_bool %^^A was arg of break_point:n
     \if_int_compare:w \l_@@_max_active_int > \l_@@_min_active_int
       \if_int_compare:w \l_@@_curr_pos_int < \l_@@_max_pos_int
@@ -4907,7 +4907,7 @@
 %   empty match. Then mark that there was a successful match; it is
 %   empty if it is \enquote{fresh}; and we store the current position
 %   and submatches. The current step is then interrupted with
-%   \cs{__prg_break:}, and only paths with higher precedence are
+%   \cs{prg_break:}, and only paths with higher precedence are
 %   pursued further. The values stored here may be overwritten by a
 %   later success of a path with higher precedence.
 %    \begin{macrocode}
@@ -4921,7 +4921,7 @@
         \int_set_eq:NN \l_@@_success_pos_int \l_@@_curr_pos_int
         \prop_set_eq:NN \l_@@_success_submatches_prop
           \l_@@_curr_submatches_prop
-        \__prg_break:
+        \prg_break:
       }
   }
 %    \end{macrocode}
@@ -5031,13 +5031,13 @@
     \exp_after:wN \@@_query_range_loop:ww
     \int_value:w \@@_int_eval:w #1 \exp_after:wN ;
     \int_value:w \@@_int_eval:w #2 ;
-    \__prg_break_point:
+    \prg_break_point:
   }
 \cs_new:Npn \@@_query_range_loop:ww #1 ; #2 ;
   {
     \if_int_compare:w #1 < #2 \exp_stop_f:
     \else:
-      \exp_after:wN \__prg_break:
+      \exp_after:wN \prg_break:
     \fi:
     \@@_toks_use:w #1 \exp_stop_f:
     \exp_after:wN \@@_query_range_loop:ww
