--- a/l3kernel/l3sort.dtx
+++ b/l3kernel/l3sort.dtx
@@ -828,7 +828,7 @@
 %   each item.  The \texttt{prepare} auxiliary receives the conditional
 %   as~|#1|, the prepared token list so far as~|#2|, the next prepared
 %   item as~|#3|, and the item after that as~|#4|.  The loop ends
-%   when~|#4| contains \cs{__prg_break_point:}, then the
+%   when~|#4| contains \cs{prg_break_point:}, then the
 %   \texttt{prepare_end} auxiliary finds the prepared token list
 %   as~|#4|.  The scene is then set up for \cs{@@_quick_split:NnNn},
 %   which sorts the prepared list and perform the post action placed
@@ -844,14 +844,14 @@
           {
             \@@_quick_prepare:Nnnn #2 { } { }
               #1
-              { \__prg_break_point: \@@_quick_prepare_end:NNNnw }
+              { \prg_break_point: \@@_quick_prepare_end:NNNnw }
             \q_stop
           }
       }
   }
 \cs_new:Npn \@@_quick_prepare:Nnnn #1#2#3#4
   {
-    \__prg_break: #4 \__prg_break_point:
+    \prg_break: #4 \prg_break_point:
     \@@_quick_prepare:Nnnn #1 { #2 #3 } { #1 {#4} }
   }
 \cs_new:Npn \@@_quick_prepare_end:NNNnw #1#2#3#4#5 \q_stop
