--- a/l3kernel/l3tl-build.dtx
+++ b/l3kernel/l3tl-build.dtx
@@ -172,13 +172,13 @@
       {
         \exp_after:wN \@@_unpack_loop:w
           \int_use:N \l_@@_start_index_int ;
-        \__prg_break_point:
+        \prg_break_point:
       }
   }
 \cs_new:Npn \@@_unpack_loop:w #1 ;
   {
     \if_int_compare:w #1 = \l_@@_index_int
-      \exp_after:wN \__prg_break:
+      \exp_after:wN \prg_break:
     \fi:
     \tex_the:D \tex_toks:D #1 \exp_stop_f:
     \@@_unpack_loop:f { \int_eval:n { #1 + 1 } }
