--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -2925,7 +2925,7 @@
       { \exp_args:Nf \@@_item_aux:nn { \int_eval:n {#2} } {#1} }
     #1
     \q_recursion_tail
-    \__prg_break_point:
+    \prg_break_point:
   }
 \cs_new:Npn \@@_item_aux:nn #1#2
   {
@@ -2935,9 +2935,9 @@
   }
 \cs_new:Npn \@@_item:nn #1#2
   {
-    \__quark_if_recursion_tail_break:nN {#2} \__prg_break:
+    \__quark_if_recursion_tail_break:nN {#2} \prg_break:
     \int_compare:nNnTF {#1} = 1
-      { \__prg_break:n { \exp_not:n {#2} } }
+      { \prg_break:n { \exp_not:n {#2} } }
       { \exp_args:Nf \@@_item:nn { \int_eval:n { #1 - 1 } } }
   }
 \cs_new:Npn \tl_item:Nn { \exp_args:No \tl_item:nn }
