--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2193,7 +2193,7 @@
 %     \@@_mapthread_function:Nnnwnn
 %   }
 %   The idea is to first expand both sequences, adding the
-%   usual |{ ? \__prg_break: } { }| to the end of each one.  This is
+%   usual |{ ? \prg_break: } { }| to the end of each one.  This is
 %   most conveniently done in two steps using an auxiliary function.
 %   The mapping then throws away the first tokens of |#2| and |#5|,
 %   which for items in both sequences are \cs{s_@@}
@@ -2208,13 +2208,13 @@
 \cs_new:Npn \@@_mapthread_function:wNN \s_@@ #1 \q_stop #2#3
   {
     \exp_after:wN \@@_mapthread_function:wNw #2 \q_stop #3
-      #1 { ? \__prg_break: } { }
-    \__prg_break_point:
+      #1 { ? \prg_break: } { }
+    \prg_break_point:
   }
 \cs_new:Npn \@@_mapthread_function:wNw \s_@@ #1 \q_stop #2
   {
     \@@_mapthread_function:Nnnwnn #2
-      #1 { ? \__prg_break: } { }
+      #1 { ? \prg_break: } { }
     \q_stop
   }
 \cs_new:Npn \@@_mapthread_function:Nnnwnn #1#2#3#4 \q_stop #5#6
@@ -2232,7 +2232,7 @@
 % \begin{macro}{\seq_set_filter:NNn, \seq_gset_filter:NNn}
 % \begin{macro}{\@@_set_filter:NNNn}
 %   Similar to \cs{seq_map_inline:Nn}, without a
-%   \cs{__prg_break_point:} because the user's code
+%   \cs{prg_break_point:} because the user's code
 %   is performed within the evaluation of a boolean expression,
 %   and skipping out of that would break horribly.
 %   The \cs{@@_wrap_item:n} function inserts the relevant
