--- a/l3trial/l3fp-extras/l3fp-symbolic.dtx
+++ b/l3trial/l3fp-extras/l3fp-symbolic.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3fp-symbolic.dtx (C) Copyright 2012-2015,2017 The LaTeX3 Project
+%% File l3fp-symbolic.dtx (C) Copyright 2012-2015,2017,2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -490,8 +490,8 @@
           { \prg_return_true: }
           {
             \exp_after:wN \@@_id_if_invalid_aux:N \tl_to_str:n {#1}
-              { ? \__prg_break:n \prg_return_false: }
-            \__prg_break_point:
+              { ? \prg_break:n \prg_return_false: }
+            \prg_break_point:
           }
       }
   }
@@ -501,7 +501,7 @@
     \int_compare:nF { `a <= `#1 <= `z }
       {
         \int_compare:nF { `A <= `#1 <= `Z }
-          { \__prg_break:n \prg_return_true: }
+          { \prg_break:n \prg_return_true: }
       }
     \@@_id_if_invalid_aux:N
   }
