--- a/l3trial/l3str-format-new/l3str-format-new.dtx
+++ b/l3trial/l3str-format-new/l3str-format-new.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3str-format-new.dtx (C) Copyright 2014-2017 The LaTeX3 Project
+%% File: l3str-format-new.dtx (C) Copyright 2014-2018 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -1041,14 +1041,14 @@
 \prg_new_conditional:Npnn \@@_if_in:nN #1#2 { TF }
   {
     \@@_if_in_aux:NN #2 #1
-      { #2 \prg_return_false: \exp_after:wN \__prg_break: \else: }
-    \__prg_break_point:
+      { #2 \prg_return_false: \exp_after:wN \prg_break: \else: }
+    \prg_break_point:
   }
 \cs_new:Npn \@@_if_in_aux:NN #1#2
   {
     \if_charcode:w #1 #2
       \prg_return_true:
-      \exp_after:wN \__prg_break:
+      \exp_after:wN \prg_break:
     \fi:
     \@@_if_in_aux:NN #1
   }
