--- a/l3trial/l3tree/l3tree.dtx
+++ b/l3trial/l3tree/l3tree.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3tree.dtx (C) Copyright 2012-2014,2016-2017 The LaTeX3 Project
+%% File l3tree.dtx (C) Copyright 2012-2014,2016-2018 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -293,7 +293,7 @@
           \s__seq
           \exp_after:wN \tree_extract_loop:w
             \int_use:N \l_tree_index_int ;
-          \__prg_break_point:
+          \prg_break_point:
           \s_obj_end
         }
     \tree_end:
@@ -331,7 +331,7 @@
 \cs_new:Npn \tree_extract_loop:w #1 ;
   {
     \if_int_compare:w #1 = 0 \exp_stop_f:
-      \exp_after:wN \__prg_break:
+      \exp_after:wN \prg_break:
     \fi:
     \exp_not:N \__seq_item:n { \__int_value:w \tex_dimen:D #1 }
     \exp_after:wN \tree_extract_loop:w
