--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -1570,11 +1570,18 @@
 % \begin{macro}[deprecated = 2019-12-31]{\@@_break:n}
 %   Made public, but used by a few third-parties.
 %    \begin{macrocode}
-\cs_new:Npn \@@_break_point:Nn { \prg_break_point:Nn }
+\cs_new_eq:NN \@@_break_point:Nn \prg_break_point:Nn
 \cs_new:Npn \@@_break_point: { \prg_break_point: }
-\cs_new:Npn \@@_map_break:Nn { \prg_map_break:Nn }
+\cs_new:Npn \@@_map_break:Nn #1#2#3 \@@_break_point:Nn #4#5
+  {
+    #5
+    \if_meaning:w #1 #4
+      \exp_after:wN \use_iii:nnn
+    \fi:
+    \@@_map_break:Nn #1 {#2}
+  }
 \cs_new:Npn \@@_break: { \prg_break: }
-\cs_new:Npn \@@_break:n { \prg_break:n }
+\cs_new:Npn \@@_break:n #1#2 \@@_break_point: {#1}
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
