--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -1469,14 +1469,14 @@
 \__kernel_patch:nnNNpn
   {
     \@@_trace_push:nnN { regex } { 1 } \@@_escape_use:nnnn
-    \__tl_build:Nw \l_@@_internal_a_tl
-      \__tl_build_one:n { \@@_trace_pop:nnN { regex } { 1 } \@@_escape_use:nnnn }
+    \tl_build:Nw \l_@@_internal_a_tl
+      \tl_build_add:n { \@@_trace_pop:nnN { regex } { 1 } \@@_escape_use:nnnn }
       \use_none:nn
   }
   { }
 \cs_new_protected:Npn \@@_escape_use:nnnn #1#2#3#4
   {
-    \__tl_build:Nw \l_@@_internal_a_tl
+    \tl_build:Nw \l_@@_internal_a_tl
       \cs_set:Npn \@@_escape_unescaped:N ##1 { #1 }
       \cs_set:Npn \@@_escape_escaped:N ##1 { #2 }
       \cs_set:Npn \@@_escape_raw:N ##1 { #3 }
@@ -1487,8 +1487,8 @@
           \exp_after:wN \@@_escape_loop:N \g_@@_internal_tl
           { break } \prg_break_point:
         }
-      \__tl_build_one:o \l_@@_internal_b_tl
-    \__tl_build_end:
+      \tl_build_add:o \l_@@_internal_b_tl
+    \tl_build_end:
     \l_@@_internal_a_tl
   }
 %    \end{macrocode}
@@ -1583,7 +1583,7 @@
     \int_compare:nNnTF {#1} > \c_max_char_int
       {
         \if_false: { \fi: }
-        \__tl_build_one:o \l_@@_internal_b_tl
+        \tl_build_add:o \l_@@_internal_b_tl
         \__kernel_msg_error:nnx { kernel } { x-overflow } {#1}
         \tl_set:Nx \l_@@_internal_b_tl
           { \if_false: } \fi:
@@ -1672,7 +1672,7 @@
 \cs_new:Npn \@@_escape_x_loop_error:n #1
   {
     \if_false: { \fi: }
-    \__tl_build_one:o \l_@@_internal_b_tl
+    \tl_build_add:o \l_@@_internal_b_tl
     \__kernel_msg_error:nnx { kernel } { x-missing-rbrace } {#1}
     \tl_set:Nx \l_@@_internal_b_tl
       { \if_false: } \fi: \@@_escape_loop:N #1
@@ -2126,13 +2126,13 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_compile:w
   {
-    \__tl_build_x:Nw \l_@@_internal_regex
+    \tl_build_x:Nw \l_@@_internal_regex
       \int_zero:N \l_@@_group_level_int
       \int_set_eq:NN \l_@@_default_catcodes_int \c_@@_all_catcodes_int
       \int_set_eq:NN \l_@@_catcodes_int \l_@@_default_catcodes_int
       \cs_set:Npn \@@_item_equal:n  { \@@_item_caseful_equal:n }
       \cs_set:Npn \@@_item_range:nn { \@@_item_caseful_range:nn }
-      \__tl_build_one:n { \@@_branch:n { \if_false: } \fi: }
+      \tl_build_add:n { \@@_branch:n { \if_false: } \fi: }
   }
 \cs_new_protected:Npn \@@_compile_end:
   {
@@ -2149,17 +2149,17 @@
         \prg_replicate:nn
           { \l_@@_group_level_int }
           {
-              \__tl_build_one:n
+              \tl_build_add:n
                 {
                   \if_false: { \fi: }
                   \if_false: { \fi: } { 1 } { 0 } \c_true_bool
                 }
-            \__tl_build_end:
-            \__tl_build_one:o \l_@@_internal_regex
+            \tl_build_end:
+            \tl_build_add:o \l_@@_internal_regex
           }
       \fi:
-      \__tl_build_one:n { \if_false: { \fi: } }
-    \__tl_build_end:
+      \tl_build_add:n { \if_false: { \fi: } }
+    \tl_build_end:
   }
 %    \end{macrocode}
 % \end{macro}
@@ -2241,10 +2241,10 @@
     \@@_mode_quit_c:
     \@@_if_in_class:TF { }
       {
-        \__tl_build_one:n
+        \tl_build_add:n
           { \@@_class:NnnnN \c_true_bool { \if_false: } \fi: }
       }
-    \__tl_build_one:x
+    \tl_build_add:x
       {
         \if_int_compare:w \l_@@_catcodes_int < \c_@@_all_catcodes_int
           \@@_item_catcode:nT { \int_use:N \l_@@_catcodes_int }
@@ -2301,7 +2301,7 @@
 %   whatever characters were grabbed are left raw).
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_compile_quantifier_none:
-  { \__tl_build_one:n { \if_false: { \fi: } { 1 } { 0 } \c_false_bool } }
+  { \tl_build_add:n { \if_false: { \fi: } { 1 } { 0 } \c_false_bool } }
 \cs_new_protected:Npn \@@_compile_quantifier_abort:xNN #1#2#3
   {
     \@@_compile_quantifier_none:
@@ -2324,9 +2324,9 @@
 \cs_new_protected:Npn \@@_compile_quantifier_lazyness:nnNN #1#2#3#4
   {
     \str_if_eq:nnTF { #3 #4 } { \@@_compile_special:N ? }
-      { \__tl_build_one:n { \if_false: { \fi: } { #1 } { #2 } \c_true_bool } }
+      { \tl_build_add:n { \if_false: { \fi: } { #1 } { #2 } \c_true_bool } }
       {
-        \__tl_build_one:n { \if_false: { \fi: } { #1 } { #2 } \c_false_bool }
+        \tl_build_add:n { \if_false: { \fi: } { #1 } { #2 } \c_false_bool }
         #3 #4
       }
   }
@@ -2513,7 +2513,7 @@
         \if_int_compare:w `#1 > `#3 \exp_stop_f:
           \__kernel_msg_error:nnxx { kernel } { range-backwards } {#1} {#3}
         \else:
-          \__tl_build_one:x
+          \tl_build_add:x
             {
               \if_int_compare:w `#1 = `#3 \exp_stop_f:
                 \@@_item_equal:n
@@ -2527,7 +2527,7 @@
       {
         \__kernel_msg_warning:nnxx { kernel } { range-missing-end }
           {#1} { \c_backslash_str #3 }
-        \__tl_build_one:x
+        \tl_build_add:x
           {
             \@@_item_equal:n { \int_value:w `#1 \exp_stop_f: }
             \@@_item_equal:n { \int_value:w `- \exp_stop_f: }
@@ -2611,7 +2611,7 @@
   {
     \@@_if_in_class_or_catcode:TF {#2}
       {
-        \__tl_build_one:n
+        \tl_build_add:n
           { \@@_assertion:Nn \c_true_bool { \@@_anchor:N #1 } }
       }
   }
@@ -2648,7 +2648,7 @@
     \@@_if_in_class_or_catcode:TF
       { \@@_compile_raw_error:N b }
       {
-        \__tl_build_one:n
+        \tl_build_add:n
           { \@@_assertion:Nn \c_true_bool { \@@_b_test: } }
       }
   }
@@ -2657,7 +2657,7 @@
     \@@_if_in_class_or_catcode:TF
       { \@@_compile_raw_error:N B }
       {
-        \__tl_build_one:n
+        \tl_build_add:n
           { \@@_assertion:Nn \c_false_bool { \@@_b_test: } }
       }
   }
@@ -2678,7 +2678,7 @@
     \@@_if_in_class:TF
       {
         \if_int_compare:w \l_@@_mode_int > \c_@@_catcode_in_class_mode_int
-          \__tl_build_one:n { \if_false: { \fi: } }
+          \tl_build_add:n { \if_false: { \fi: } }
         \fi:
         \tex_advance:D \l_@@_mode_int - 15 \exp_stop_f:
         \tex_divide:D \l_@@_mode_int 13 \exp_stop_f:
@@ -2742,7 +2742,7 @@
 \cs_new_protected:Npn \@@_compile_class_catcode:w #1;
   {
     \if_int_compare:w \l_@@_mode_int = \c_@@_catcode_mode_int
-      \__tl_build_one:n
+      \tl_build_add:n
         { \@@_class:NnnnN \c_true_bool { \if_false: } \fi: }
     \fi:
     \int_set_eq:NN \l_@@_catcodes_int \l_@@_default_catcodes_int
@@ -2764,11 +2764,11 @@
     \l_@@_mode_int = \int_value:w \l_@@_mode_int 3 \exp_stop_f:
     \str_if_eq:nnTF { #3 #4 } { \@@_compile_special:N ^ }
       {
-        \__tl_build_one:n { #2 { \if_false: } \fi: }
+        \tl_build_add:n { #2 { \if_false: } \fi: }
         \@@_compile_class:NN
       }
       {
-        \__tl_build_one:n { #1 { \if_false: } \fi: }
+        \tl_build_add:n { #1 { \if_false: } \fi: }
         \@@_compile_class:NN #3 #4
       }
   }
@@ -2879,20 +2879,20 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_compile_group_begin:N #1
   {
-    \__tl_build_one:n { #1 { \if_false: } \fi: }
+    \tl_build_add:n { #1 { \if_false: } \fi: }
     \@@_mode_quit_c:
-    \__tl_build:Nw \l_@@_internal_regex
+    \tl_build:Nw \l_@@_internal_regex
       \int_set_eq:NN \l_@@_default_catcodes_int \l_@@_catcodes_int
       \int_incr:N \l_@@_group_level_int
-      \__tl_build_one:n { \@@_branch:n { \if_false: } \fi: }
+      \tl_build_add:n { \@@_branch:n { \if_false: } \fi: }
   }
 \cs_new_protected:Npn \@@_compile_group_end:
   {
     \if_int_compare:w \l_@@_group_level_int > 0 \exp_stop_f:
-        \__tl_build_one:n { \if_false: { \fi: } }
-      \__tl_build_end:
+        \tl_build_add:n { \if_false: { \fi: } }
+      \tl_build_end:
       \int_set_eq:NN \l_@@_catcodes_int \l_@@_default_catcodes_int
-      \__tl_build_one:o \l_@@_internal_regex
+      \tl_build_add:o \l_@@_internal_regex
       \exp_after:wN \@@_compile_quantifier:w
     \else:
       \__kernel_msg_warning:nn { kernel } { extra-rparen }
@@ -2941,7 +2941,7 @@
   {
     \@@_if_in_class:TF { \@@_compile_raw:N | }
       {
-        \__tl_build_one:n
+        \tl_build_add:n
           { \if_false: { \fi: } \@@_branch:n { \if_false: } \fi: }
       }
   }
@@ -3315,7 +3315,7 @@
   {
     \tl_gset:Nx \g_@@_internal_tl
       { \exp_args:No \__str_to_other_fast:n { \l_@@_internal_a_tl } }
-    \__tl_build_one:x
+    \tl_build_add:x
       {
         \tl_map_function:NN \g_@@_internal_tl
           \@@_compile_u_in_cs_aux:n
@@ -3340,7 +3340,7 @@
   {
     \exp_args:No \__tl_analysis_map_inline:nn { \l_@@_internal_a_tl }
       {
-        \__tl_build_one:n
+        \tl_build_add:n
           {
             \@@_class:NnnnN \c_true_bool
               {
@@ -3368,7 +3368,7 @@
 \cs_new_protected:cpn { @@_compile_/K: }
   {
     \int_compare:nNnTF \l_@@_mode_int = \c_@@_outer_mode_int
-      { \__tl_build_one:n { \@@_command_K: } }
+      { \tl_build_add:n { \@@_command_K: } }
       { \@@_compile_raw_error:N K }
   }
 %    \end{macrocode}
@@ -3384,7 +3384,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_show:N #1
   {
-    \__tl_build:Nw \l_@@_internal_a_tl
+    \tl_build:Nw \l_@@_internal_a_tl
       \cs_set_protected:Npn \@@_branch:n
         {
           \seq_pop_right:NN \l_@@_show_prefix_seq \l_@@_internal_a_tl
@@ -3431,7 +3431,7 @@
       \seq_clear:N \l_@@_show_prefix_seq
       \@@_show_push:n { ~ }
       \cs_if_exist_use:N #1
-    \__tl_build_end:
+    \tl_build_end:
   }
 %    \end{macrocode}
 % \end{macro}
@@ -3443,7 +3443,7 @@
 \cs_new_protected:Npn \@@_show_one:n #1
   {
     \int_incr:N \l_@@_show_lines_int
-    \__tl_build_one:x
+    \tl_build_add:x
       {
         \exp_not:N \iow_newline:
         \seq_map_function:NN \l_@@_show_prefix_seq \use:n
@@ -3504,7 +3504,7 @@
 %    \begin{macrocode}
 \cs_set:Npn \@@_show_class:NnnnN #1#2#3#4#5
   {
-    \__tl_build:Nw \l_@@_internal_a_tl
+    \tl_build:Nw \l_@@_internal_a_tl
       \int_zero:N \l_@@_show_lines_int
       \@@_show_push:n {~}
       #2
@@ -3513,32 +3513,32 @@
       {
         {0}
           {
-            \__tl_build_end:
+            \tl_build_end:
             \@@_show_one:n { \bool_if:NTF #1 { Fail } { Pass } }
           }
         {1}
           {
-            \__tl_build_end:
+            \tl_build_end:
             \bool_if:NTF #1
               {
                 #2
-                \__tl_build_one:n { \@@_msg_repeated:nnN {#3} {#4} #5 }
+                \tl_build_add:n { \@@_msg_repeated:nnN {#3} {#4} #5 }
               }
               {
                 \@@_show_one:n
                   { Don't~match~\@@_msg_repeated:nnN {#3} {#4} #5 }
-                \__tl_build_one:o \l_@@_internal_a_tl
+                \tl_build_add:o \l_@@_internal_a_tl
               }
           }
       }
       {
-        \__tl_build_end:
+        \tl_build_end:
         \@@_show_one:n
           {
             \bool_if:NTF #1 { M } { Don't~m } atch
             \@@_msg_repeated:nnN {#3} {#4} #5
           }
-        \__tl_build_one:o \l_@@_internal_a_tl
+        \tl_build_add:o \l_@@_internal_a_tl
       }
   }
 %    \end{macrocode}
@@ -5112,7 +5112,7 @@
   { \@@_trace_pop:nnN { regex } { 1 } \@@_replacement:n }
 \cs_new_protected:Npn \@@_replacement:n #1
   {
-    \__tl_build:Nw \l_@@_internal_a_tl
+    \tl_build:Nw \l_@@_internal_a_tl
       \int_zero:N \l_@@_balance_int
       \tl_clear:N \l_@@_balance_tl
       \@@_escape_use:nnnn
@@ -5131,7 +5131,7 @@
       \if_int_compare:w \l_@@_replacement_csnames_int > 0 \exp_stop_f:
         \__kernel_msg_error:nnx { kernel } { replacement-missing-rbrace }
           { \int_use:N \l_@@_replacement_csnames_int }
-        \__tl_build_one:x
+        \tl_build_add:x
           { \prg_replicate:nn \l_@@_replacement_csnames_int \cs_end: }
       \fi:
       \seq_if_empty:NF \l_@@_replacement_category_seq
@@ -5146,7 +5146,7 @@
           \l_@@_balance_tl
           - \@@_submatch_balance:n {##1}
         }
-    \__tl_build_end:
+    \tl_build_end:
     \exp_args:No \@@_replacement_aux:n \l_@@_internal_a_tl
   }
 \cs_new_protected:Npn \@@_replacement_aux:n #1
@@ -5176,7 +5176,7 @@
 \cs_new_protected:Npn \@@_replacement_normal:n #1
   {
     \tl_if_empty:NTF \l_@@_replacement_category_tl
-      { \__tl_build_one:n {#1} }
+      { \tl_build_add:n {#1} }
       { % (
         \token_if_eq_charcode:NNTF #1 )
           {
@@ -5228,7 +5228,7 @@
 \cs_new_protected:Npn \@@_replacement_put_submatch:n #1
   {
     \if_int_compare:w #1 < \l_@@_capturing_group_int
-      \__tl_build_one:n { \@@_query_submatch:n { #1 + ##1 } }
+      \tl_build_add:n { \@@_query_submatch:n { #1 + ##1 } }
       \if_int_compare:w \l_@@_replacement_csnames_int = 0 \exp_stop_f:
         \tl_put_right:Nn \l_@@_balance_tl
           {
@@ -5320,9 +5320,9 @@
 \cs_new_protected:Npn \@@_replacement_cu_aux:Nw #1
   {
     \if_case:w \l_@@_replacement_csnames_int
-      \__tl_build_one:n { \exp_not:n { \exp_after:wN #1 \cs:w } }
+      \tl_build_add:n { \exp_not:n { \exp_after:wN #1 \cs:w } }
     \else:
-      \__tl_build_one:n { \exp_not:n { \exp_after:wN \tl_to_str:V \cs:w } }
+      \tl_build_add:n { \exp_not:n { \exp_after:wN \tl_to_str:V \cs:w } }
     \fi:
     \int_incr:N \l_@@_replacement_csnames_int
   }
@@ -5351,7 +5351,7 @@
 \cs_new_protected:Npn \@@_replacement_rbrace:N #1
   {
     \if_int_compare:w \l_@@_replacement_csnames_int > 0 \exp_stop_f:
-      \__tl_build_one:n \cs_end:
+      \tl_build_add:n \cs_end:
       \int_decr:N \l_@@_replacement_csnames_int
     \else:
       \@@_replacement_normal:n {#1}
@@ -5428,7 +5428,7 @@
   \cs_new_protected:Npn \@@_replacement_char:nNN #1#2#3
     {
       \tex_lccode:D 0 = `#3 \scan_stop:
-      \tex_lowercase:D { \__tl_build_one:n {#1} }
+      \tex_lowercase:D { \tl_build_add:n {#1} }
     }
 %    \end{macrocode}
 % \end{macro}
@@ -5472,7 +5472,7 @@
 %   character, we prepare for two \texttt{x}-expansions.
 %    \begin{macrocode}
   \cs_new_protected:Npn \@@_replacement_c_C:w #1#2
-    { \__tl_build_one:n { \exp_not:N \exp_not:N \exp_not:c {#2} } }
+    { \tl_build_add:n { \exp_not:N \exp_not:N \exp_not:c {#2} } }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -5558,7 +5558,7 @@
         \__kernel_msg_error:nn { kernel } { replacement-null-space }
       \fi:
       \tex_lccode:D `\ = `#2 \scan_stop:
-      \tex_lowercase:D { \__tl_build_one:n {~} }
+      \tex_lowercase:D { \tl_build_add:n {~} }
     }
 %    \end{macrocode}
 % \end{macro}
