--- a/l3experimental/l3str/l3str-convert.dtx
+++ b/l3experimental/l3str/l3str-convert.dtx
@@ -1025,7 +1025,7 @@
 %   linear time. We produce an arbitrary character of category code 12
 %   and add that character
 %   to the end of the token list being built. At the end of the loop,
-%   put the token list together with \cs{__tl_build_end:}. Note that we
+%   put the token list together with \cs{tl_build_end:}. Note that we
 %   use an \texttt{x}-expanding assignment because it is slightly
 %   faster. Unicode-aware engines will never incur an overflow because
 %   the internal string is guaranteed to only contain code points in
@@ -1034,16 +1034,16 @@
     {
       \cs_new_protected:Npn \@@_convert_encode_:
         {
-          \__tl_gbuild_x:Nw \g_@@_result_tl
+          \tl_gbuild_x:Nw \g_@@_result_tl
             \exp_after:wN \@@_encode_native_loop:w
               \g_@@_result_tl \s__tl { \q_stop \prg_break: } \s__tl
             \prg_break_point:
-          \__tl_build_end:
+          \tl_build_end:
         }
       \cs_new_protected:Npn \@@_encode_native_loop:w #1 \s__tl #2 \s__tl
         {
           \use_none_delimit_by_q_stop:w #2 \q_stop
-          \exp_args:Nx \__tl_build_one:n
+          \tl_build_add:x
             { \char_generate:nn {#2} {12} }
           \@@_encode_native_loop:w
         }
