A few __tl_build docs missed [ci skip]

--- a/l3kernel/l3tl-build.dtx
+++ b/l3kernel/l3tl-build.dtx
@@ -92,8 +92,8 @@
 %   }
 %   \begin{syntax}
 %     \cs{tl_build:Nw} \meta{tl~var} \texttt{\ldots{}}
-%     \cs{tl_build_one:n} \Arg{tokens_1} \texttt{\ldots{}}
-%     \cs{tl_build_one:n} \Arg{tokens_2} \texttt{\ldots{}}
+%     \cs{tl_build_add:n} \Arg{tokens_1} \texttt{\ldots{}}
+%     \cs{tl_build_add:n} \Arg{tokens_2} \texttt{\ldots{}}
 %     \ldots{}
 %     \cs{tl_build_end:}
 %   \end{syntax}
@@ -110,7 +110,7 @@
 % \begin{function}[added = 2018-03-28]
 %   {\tl_build_add:n, \tl_build_add:o, \tl_build_add:x}
 %   \begin{syntax}
-%     \cs{__tl_build_one:n} \Arg{tokens}
+%     \cs{tl_build_add:n} \Arg{tokens}
 %   \end{syntax}
 %   This function may only be used within the scope of a
 %   \cs_tl_build:Nw} function. It adds the \meta{tokens} on the
