Avoid \__tl_trim_spaces:nn
This requires a new public function, and is slightly slower.

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -913,9 +913,7 @@
 %   The main function starts off by normalising category codes in package mode.
 %   That's relatively \enquote{expensive} so is skipped (hopefully) in format
 %   mode. We then hand off to the parser. The use of \cs{q_mark} here prevents
-%   loss of braces from the key argument. This particular quark is chosen as
-%   it fits in with \cs{__tl_trim_spaces:nn} and allows a performance enhancement
-%   as the token can be carried through. Notice that by passing the two
+%   loss of braces from the key argument. Notice that by passing the two
 %   processor commands along the input stack we avoid the need to track these
 %   at all.
 %    \begin{macrocode}
@@ -1088,15 +1086,13 @@
 % \begin{macro}{\@@_def:Nn}
 % \begin{macro}[EXP]{\@@_def_aux:n}
 % \begin{macro}[EXP]{\@@_def_aux:w}
-%   First trim spaces off, then potentially remove a set of braces. By using
-%   the internal interface |\__tl_trim_spaces:nn| we can take advantage of the
-%   fact it needs a leading |\q_mark| in this process. The |\exp_after:wN|
-%   removes the quark, the delimited argument deals with any braces.
+%   First remove the leading quark, then trim spaces off, and finally remove
+%   a set of braces. 
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_def:Nn #1#2
-  { \tl_set:Nx #1 { \__tl_trim_spaces:nn {#2} \@@_def_aux:n } }
+  { \tl_set:Nx #1 { \tl_trim_spaces:oN { \use_none:n #2 } \@@_def_aux:n } }
 \cs_new:Npn \@@_def_aux:n #1
-  { \exp_after:wN \@@_def_aux:w #1 \q_stop }
+  { \@@_def_aux:w #1 \q_stop }
 \cs_new:Npn \@@_def_aux:w #1 \q_stop { \exp_not:n {#1} }
 %    \end{macrocode}
 % \end{macro}
