--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -634,14 +634,15 @@
 %     \@@_from_keyval:n,
 %     \@@_from_keyval_loop:w,
 %     \@@_from_keyval_split:Nw,
+%     \@@_from_keyval_key:n,
 %     \@@_from_keyval_key:w,
+%     \@@_from_keyval_value:n,
 %     \@@_from_keyval_value:w
 %   }
 %   Loop through items separated by commas, with \cs{q_mark} to avoid
 %   losing braces.  After checking for termination, split the item at
 %   the first then at the second |=| (which ought to be the first of the
-%   trailing~|=|).  At both splits, trim spaces (the internal
-%   \cs{__tl_trim_spaces:nn} expects the \cs{q_mark} we give it) and
+%   trailing~|=|).  At both splits, trim spaces and
 %   call \cs{@@_from_keyval_key:w}, then \cs{@@_from_keyval_value:w},
 %   followed by the trimmed material, \cs{q_nil}, the subsequent part of
 %   the item, and the trailing |=|'s and \cs{q_stop}.  After finding the
@@ -670,20 +671,24 @@
 \cs_new:Npn \@@_from_keyval_loop:w #1 ,
   {
     \quark_if_recursion_tail_stop:o { \use_none:n #1 }
-    \@@_from_keyval_split:Nw \@@_from_keyval_key:w
+    \@@_from_keyval_split:Nw \@@_from_keyval_key:n
       #1 = = \q_stop { \use_none:n #1 }
     \@@_from_keyval_loop:w \q_mark
   }
 \cs_new:Npn \@@_from_keyval_split:Nw #1#2 =
   {
-    \__tl_trim_spaces:nn {#2}
-      { \exp_last_unbraced:No #1 } \q_nil
+    \tl_trim_spaces:oN { \use_none:n #2 } #1
+      \q_nil
   }
+\cs_new:Npn \@@_from_keyval_key:n #1
+  { \@@_from_keyval_key:w #1 }
 \cs_new:Npn \@@_from_keyval_key:w #1 \q_nil #2 \q_stop
   {
-    \@@_from_keyval_split:Nw \@@_from_keyval_value:w
+    \@@_from_keyval_split:Nw \@@_from_keyval_value:n
       \q_mark #2 \q_stop {#1}
   }
+\cs_new:Npn \@@_from_keyval_value:n #1
+  { \@@_from_keyval_value:w #1 }
 \cs_new:Npn \@@_from_keyval_value:w #1 \q_nil #2 \q_stop #3#4
   {
     \tl_if_empty:nF { #3 #1 #2 }
