--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -754,7 +754,7 @@
 % \end{function}
 %
 % \begin{function}[added = 2011-07-09, updated = 2012-06-25, EXP]
-%   {\tl_trim_spaces:n}
+%   {\tl_trim_spaces:n, \tl_trim_spaces:o}
 %   \begin{syntax}
 %     \cs{tl_trim_spaces:n} \Arg{token list}
 %   \end{syntax}
@@ -767,6 +767,16 @@
 %     list does not expand further when appearing in an \texttt{x}-type
 %     argument expansion.
 %   \end{texnote}
+% \end{function}
+%
+% \begin{function}[added = 2018-03-29, EXP]
+%   {\tl_trim_spaces:nN, \tl_trim_spaces:oN}
+%   \begin{syntax}
+%     \cs{tl_trim_spaces:nN} \Arg{token list} \meta{function}
+%   \end{syntax}
+%   Removes any leading and trailing explicit space characters
+%   (explicit tokens with character code~$32$ and category code~$10$)
+%   from the \meta{token list} and passes the result to the \meta{function}.
 % \end{function}
 %
 % \begin{function}[added = 2011-07-09]
@@ -1078,22 +1088,6 @@
 %   function. However, they may be overwritten by other non-kernel
 %   code and so should only be used for short-term storage.
 % \end{variable}
-%
-% \section{Internal functions}
-%
-% \begin{function}{\__tl_trim_spaces:nn}
-%   \begin{syntax}
-%     \cs{__tl_trim_spaces:nn} |{ \q_mark| \meta{token list} |}| \Arg{continuation}
-%   \end{syntax}
-%   This function removes all leading and trailing explicit space
-%   characters from the \meta{token list}, and expands to the
-%   \meta{continuation}, followed by a brace group containing
-%   \cs{use_none:n} \cs{q_mark} \meta{trimmed token list}.  For
-%   instance, \cs{tl_trim_spaces:n} is implemented by taking the
-%   \meta{continuation} to be \cs{exp_not:o}, and the \texttt{o}-type
-%   expansion removes the \cs{q_mark}.  This function is also used in
-%   \pkg{l3clist} and \pkg{l3candidates}.
-% \end{function}
 %
 % \end{documentation}
 %
@@ -2378,6 +2372,7 @@
 % \end{macro}
 %
 % \begin{macro}{\tl_trim_spaces:n, \tl_trim_spaces:o}
+% \begin{macro}{\tl_trim_spaces:nN, \tl_trim_spaces:oN}
 % \begin{macro}
 %   {
 %     \tl_trim_spaces:N, \tl_trim_spaces:c,
@@ -2394,6 +2389,9 @@
 \cs_new:Npn \tl_trim_spaces:n #1
   { \@@_trim_spaces:nn { \q_mark #1 } \exp_not:o }
 \cs_generate_variant:Nn \tl_trim_spaces:n { o }
+\cs_new:Npn \tl_trim_spaces:nN #1#2
+  { \@@_trim_spaces:nn { \q_mark #1 } { \exp_args:No #2 } }
+\cs_generate_variant:Nn \tl_trim_spaces:nN { o }
 \cs_new_protected:Npn \tl_trim_spaces:N #1
   { \tl_set:Nx #1 { \exp_args:No \tl_trim_spaces:n {#1} } }
 \cs_new_protected:Npn \tl_gtrim_spaces:N #1
@@ -2464,6 +2462,7 @@
   }
 \@@_tmp:w { ~ }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 %
