--- a/l3trial/l3str-format-new/l3str-format-new.dtx
+++ b/l3trial/l3str-format-new/l3str-format-new.dtx
@@ -250,8 +250,6 @@
 % \section{Possibilities, and things to do}
 %
 % \begin{itemize}
-%   \item Note somewhere that the internal \cs{__tl_trim_spaces:nn} is
-%     used!  Fix that.
 %   \item Provide a token list formatting \meta{style} which keeps the
 %     last \meta{precision} characters rather than the first
 %     \meta{precision}.
@@ -315,20 +313,26 @@
 %
 % \subsection{Key--value pairs}
 %
-% \begin{macro}[aux,EXP]{\@@_keyval_strip:w, \@@_keyval_strip_aux:wn}
+% \begin{macro}[EXP]{\@@_keyval_strip_do:nn}
+% \begin{macro}[EXP]{\@@_keyval_strip:n}
+% \begin{macro}[EXP]{\@@_keyval_strip:wn}
 %   \cs{@@_keyval_strip_do:nn} receives |{| \cs{q_mark} \meta{token
 %       list} |}| as its first argument, trims spaces from both ends of
-%   the \meta{token list} thanks to \cs{__tl_trim_spaces:nn}, and
+%   the \meta{token list}, and
 %   removes one set of braces, then feeds the result to its second
 %   argument as a brace group.
 %    \begin{macrocode}
 \cs_new:Npn \@@_keyval_strip_do:nn #1
   {
-    \__tl_trim_spaces:nn {#1}
-      { \exp_last_unbraced:No \@@_keyval_strip_aux:wn } \q_stop
+    \tl_trim_spaces:oN { \use_none:n #1 }
+      \@@_keyval_strip:n
+      \q_stop
   }
-\cs_new:Npn \@@_keyval_strip_aux:wn #1 \q_stop #2 { #2 {#1} }
+\cs_new:Npn \@@_keyval_strip:n #1 { \@@_keyval_strip:wn #1 }
+\cs_new:Npn \@@_keyval_strip:wn #1 \q_stop #2 { #2 {#1} }
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 %
 % \begin{macro}[int,EXP]{\@@_keyval_parse:NNn}
